; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/radeon/extr_radeon_cs.c_radeon_cs_packet_next_is_pkt3_nop.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/radeon/extr_radeon_cs.c_radeon_cs_packet_next_is_pkt3_nop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.radeon_cs_parser = type { i32 }
%struct.radeon_cs_packet = type { i64, i64 }

@RADEON_PACKET_TYPE3 = common dso_local global i64 0, align 8
@RADEON_PACKET3_NOP = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @radeon_cs_packet_next_is_pkt3_nop(%struct.radeon_cs_parser* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.radeon_cs_parser*, align 8
  %4 = alloca %struct.radeon_cs_packet, align 8
  %5 = alloca i32, align 4
  store %struct.radeon_cs_parser* %0, %struct.radeon_cs_parser** %3, align 8
  %6 = load %struct.radeon_cs_parser*, %struct.radeon_cs_parser** %3, align 8
  %7 = load %struct.radeon_cs_parser*, %struct.radeon_cs_parser** %3, align 8
  %8 = getelementptr inbounds %struct.radeon_cs_parser, %struct.radeon_cs_parser* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @radeon_cs_packet_parse(%struct.radeon_cs_parser* %6, %struct.radeon_cs_packet* %4, i32 %9)
  store i32 %10, i32* %5, align 4
  %11 = load i32, i32* %5, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %14

13:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %27

14:                                               ; preds = %1
  %15 = getelementptr inbounds %struct.radeon_cs_packet, %struct.radeon_cs_packet* %4, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = load i64, i64* @RADEON_PACKET_TYPE3, align 8
  %18 = icmp ne i64 %16, %17
  br i1 %18, label %19, label %20

19:                                               ; preds = %14
  store i32 0, i32* %2, align 4
  br label %27

20:                                               ; preds = %14
  %21 = getelementptr inbounds %struct.radeon_cs_packet, %struct.radeon_cs_packet* %4, i32 0, i32 1
  %22 = load i64, i64* %21, align 8
  %23 = load i64, i64* @RADEON_PACKET3_NOP, align 8
  %24 = icmp ne i64 %22, %23
  br i1 %24, label %25, label %26

25:                                               ; preds = %20
  store i32 0, i32* %2, align 4
  br label %27

26:                                               ; preds = %20
  store i32 1, i32* %2, align 4
  br label %27

27:                                               ; preds = %26, %25, %19, %13
  %28 = load i32, i32* %2, align 4
  ret i32 %28
}

declare dso_local i32 @radeon_cs_packet_parse(%struct.radeon_cs_parser*, %struct.radeon_cs_packet*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
